Joke Project creation + model creation

--- a/JokeApp/JokeApp.csproj
+++ b/JokeApp/JokeApp.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <UserSecretsId>aspnet-mvc-953413F5-B50D-42DA-B93E-55B93ED05BEE</UserSecretsId>
+    <UserSecretsId>aspnet-JokeApp-C9901178-A502-46A4-9AA3-5F511D6A7214</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" PrivateAssets="All" />
   </ItemGroup>
 
