--- a/JokeApp/appsettings.json
+++ b/JokeApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Server=localhost;Database=Joke;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
