--- a/JokeApp/appsettings.Development.json
+++ b/JokeApp/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Joke;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
